--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </div>
       </div>
       <ul class="thumb">
-        <li><img src="images/thumb1.png" /></li>
-        <li><img src="images/thumb2.png" /></li>
-        <li><img src="images/thumb3.png" /></li>
+        <li><img src="images/thumb1.png" onclick="imgSlider('images/img1.png');changeColor('#017143')"></li>
+        <li><img src="images/thumb2.png" onclick="imgSlider('images/img2.png');changeColor('#eb7495')"></li>
+        <li><img src="images/thumb3.png" onclick="imgSlider('images/img3.png');changeColor('#d752b1')"></li>
       </ul>
       <ul class="sci">
         <li>
@@ -52,5 +52,6 @@
         </li>
       </ul>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
